done with HTML. only using JS for the rest.
SITE IS LOOKING GOOD!

--- a/index.html
+++ b/index.html
@@ -10,15 +10,24 @@
     <div id="header-container">
       <h1> Owen's SUPER AMAZING SHOPPING LIST! </h1> </div>
     <div id="fruit-container"> 
-        <button class="fruit-button" id="apple"> </button>
-        <button class="fruit-button" id="pear"> </button>
-        <button class ="fruit-button" id="banana"> </button>
-        <button class="fruit-button" id="watermelon"> </button>
-        <button class="fruit-button" id="pineapple"> </button>
-        <button class="fruit-button" id="orange"> </button>
-        <button class="fruit-button" id="coconut"> </button>
-        <button class="fruit-button" id="strawberry"> </button>
-        <button class="fruit-button" id="cherry"> </button>
+        <button class="fruit-button" id="apple"> 
+            <img src="./pictures for buttons/apple.png" alt="Apple" </button>
+        <button class="fruit-button" id="pear"> 
+            <img src="./pictures for buttons/pear.png" alt="Pear" </button>
+        <button class ="fruit-button" id="banana"> 
+            <img src="./pictures for buttons/banana.png" alt="Banana" </button>
+        <button class="fruit-button" id="watermelon"> 
+            <img src="./pictures for buttons/watermelon.png" alt="Watermelon" </button>
+        <button class="fruit-button" id="pineapple"> 
+            <img src="./pictures for buttons/pineapple.png" alt="Pineapple" </button>
+        <button class="fruit-button" id="orange"> 
+            <img src="./pictures for buttons/orange.png" alt="Orange" </button>
+        <button class="fruit-button" id="coconut"> 
+            <img src="pictures for buttons/coconut.png" alt="Coconut" </button>
+        <button class="fruit-button" id="strawberry"> 
+            <img src="./pictures for buttons/strawberry.png" alt="Strawberry" </button>
+        <button class="fruit-button" id="cherry"> 
+            <img src="./pictures for buttons/cherry.png" alt="Cherry" </button>
 </div>
 
         
